use ai to create landing page

--- a/index.html
+++ b/index.html
@@ -1,47 +1,138 @@
-<!DOCTYPE html>
+ <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Charity Water Landing Page</title>
-    <link rel="stylesheet" href="styles.css">
+    <title>Global Water Crisis | Join the Movement</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Anton&family=Work+Sans:wght@400;600;700&display=swap" rel="stylesheet">
+   
 </head>
 <body>
-    <!-- Hero Section: This is the main banner at the top of the page -->
+    <!-- Hero Section -->
     <section class="hero">
-        <!-- Main headline -->
-        <h1>Clean Water for Everyone</h1>
-        <!-- Subheadline -->
-        <p>Join us in bringing safe, clean water to communities in need.</p>
-    </section>
-
-    <!-- Story Section: This tells the story of the nonprofit -->
-    <section class="story">
-        <h2>Our Story</h2>
-        <p>
-         
-    </section>
-
-    <!-- Real-World Impact Story Section -->
-    <section class="impact-story">
-        <!-- Section headline -->
-        <h2>Real Impact: Meet Amina</h2>
-        <!-- Container for image and text -->
-        <div class="impact-content">
-            <!-- Impact image -->
-            <img src="https://images.unsplash.com/photo-1464983953574-0892a716854b?auto=format&fit=crop&w=600&q=80" alt="Amina smiling with clean water" class="impact-image">
-            <!-- Impact story text -->
+        <div class="hero-content">
+            <h1>
+                <span class="stat-highlight">2.2 Billion</span>
+                People Lack Safe Drinking Water
+            </h1>
             <p>
-                Amina used to walk miles every day to collect water for her family. Thanks to your support, her village now has a clean water well. Amina can go to school and her family is healthier and happier.
+                This isn't someone else's problem. This is our generation's crisis to solve.
+                Join thousands of students making waves for clean water access worldwide.
             </p>
+            <a href="#action" class="cta-button">Take Action Now</a>
+        </div>
+        <div class="scroll-indicator"></div>
+    </section>
+
+    <!-- Impact Section -->
+    <section class="impact-section">
+        <div class="container">
+            <h2 class="section-title">The Reality We Face</h2>
+            <div class="stats-grid">
+                <div class="stat-card">
+                    <span class="stat-number">1 in 3</span>
+                    <p class="stat-label">People worldwide lack access to safe water</p>
+                </div>
+                <div class="stat-card">
+                    <span class="stat-number">2 Hours</span>
+                    <p class="stat-label">Average daily walk for water in developing regions</p>
+                </div>
+                <div class="stat-card">
+                    <span class="stat-number">443M</span>
+                    <p class="stat-label">School days lost annually due to water-related illness</p>
+                </div>
+            </div>
         </div>
     </section>
 
-    <!-- Call-to-Action Section: This encourages visitors to take action -->
-    <section class="call-to-action">
-        <h2>Make a Difference</h2>
-        <p>Your support can help save lives. Every donation brings us closer to a world with clean water for all.</p>
-        <a href="#" class="donate-button">Donate Now</a>
+    <!-- Problem Section -->
+    <section class="problem-section">
+        <div class="container">
+            <h2 class="section-title">Why This Matters to You</h2>
+            <div class="problem-grid">
+                <div class="problem-card">
+                    <h3>🌍 Global Impact</h3>
+                    <p>
+                        Water scarcity affects every continent. Climate change is making it worse. 
+                        By 2025, half the world's population will live in water-stressed areas.
+                    </p>
+                </div>
+                <div class="problem-card">
+                    <h3>📚 Education Barrier</h3>
+                    <p>
+                        Kids, especially girls, miss school to fetch water. Clean water access = 
+                        education access = breaking the cycle of poverty. It's that connected.
+                    </p>
+                </div>
+                <div class="problem-card">
+                    <h3>💡 Solvable Crisis</h3>
+                    <p>
+                        Unlike some global issues, we have the technology and knowledge to fix this. 
+                        What's missing? Awareness, funding, and action. That's where we come in.
+                    </p>
+                </div>
+            </div>
+        </div>
     </section>
+
+    <!-- Action Section -->
+    <section class="action-section" id="action">
+        <div class="container">
+            <h2 class="section-title">How You Can Make a Difference</h2>
+            <div class="action-grid">
+                <div class="action-card">
+                    <span class="action-number">01</span>
+                    <h3>Educate & Share</h3>
+                    <p>
+                        Spread awareness on campus and social media. Share facts, start conversations, 
+                        and help others understand the scope of this crisis.
+                    </p>
+                </div>
+                <div class="action-card">
+                    <span class="action-number">02</span>
+                    <h3>Fundraise</h3>
+                    <p>
+                        Organize events, start campaigns, or donate. Even small contributions fund 
+                        water wells, filtration systems, and sanitation projects.
+                    </p>
+                </div>
+                <div class="action-card">
+                    <span class="action-number">03</span>
+                    <h3>Volunteer</h3>
+                    <p>
+                        Join or start a campus chapter. Connect with organizations doing groundwork. 
+                        Your skills in tech, design, or advocacy are needed.
+                    </p>
+                </div>
+                <div class="action-card">
+                    <span class="action-number">04</span>
+                    <h3>Advocate</h3>
+                    <p>
+                        Contact representatives, sign petitions, push for policy changes. 
+                        Your voice matters in making water access a priority.
+                    </p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Final CTA -->
+    <section class="final-cta">
+        <div class="container">
+            <h2>Ready to Make Waves?</h2>
+            <p>
+                Every major movement started with people like you who decided enough is enough. 
+                Join the generation that solved the water crisis.
+            </p>
+            <a href="#" class="cta-button-secondary">Get Started Today</a>
+        </div>
+    </section>
+
+    <!-- Footer -->
+    <footer>
+        <p>&copy; 2024 Water Crisis Action | Together We Can Make a Difference</p>
+    </footer>
 </body>
 </html>
